bk_ida/gccida/c0/decompose
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2683:25: error: conflicting types for 'decompose'
 struct decomposition * decompose(  struct decomposition *retstr, rtx x) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:254:29: note: previous declaration is here
static struct decomposition decompose PARAMS ((rtx));
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2713:12: error: expected expression
*( _OWORD *)&val.start = 0uLL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2713:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&val.start = 0uLL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2760:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2761:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v21 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2780:20: error: too many arguments to function call, expected 1, have 2
decompose( retstr, x->fld[0].rtx); 
~~~~~~~~~          ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:254:1: note: 'decompose' declared here
static struct decomposition decompose PARAMS ((rtx));
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2821:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2822:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2848:12: error: expected expression
*( _OWORD *)&retstr->start = *( _OWORD *)&val.start; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2848:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&retstr->start = *( _OWORD *)&val.start; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2848:41: error: expected expression
*( _OWORD *)&retstr->start = *( _OWORD *)&val.start; 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2848:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&retstr->start = *( _OWORD *)&val.start; 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2901:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
base = (  struct rtx_def *)addr[1]; 
                           ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2914:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
offset = ( rtx)addr[1]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2928:32: error: use of undeclared identifier 'machine_mode'
base = gen_rtx_fmt_ee( PLUS, ( machine_mode)BYTE2( *( _DWORD *)base), base, *( rtx *)&offset[1]); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2934:32: error: use of undeclared identifier 'machine_mode'
base = gen_rtx_fmt_ee( PLUS, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)base), base, offset->fld[0].rtx); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2934:47: error: expected expression
base = gen_rtx_fmt_ee( PLUS, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)base), base, offset->fld[0].rtx); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2935:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
offset = ( rtx)offset[1]; 
               ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/reload.c:2943:32: error: use of undeclared identifier 'machine_mode'
base = gen_rtx_fmt_ee( PLUS, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)base), base, offset); 
                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decompose/src/obj/reload.o] Error 1
